<resources>
    <string name="app_name">Androidmade</string>
    <string name="andromate">ANDROMATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="v5_11_5">v5.11.5</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="blog">Blog</string>
    <string name="invite_friends">Invite Friend</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="add_macro">Add Macro</string>
    <string name="add_macro_nwizard">Add Macro\nWizard</string>
    <string name="export_import">Export/Import</string>
    <string name="macro_drawer">Macro Drawer</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_macro_name">Enter macro name</string>
    <string name="triggers">Triggers</string>
    <string name="constraints">Constraints</string>
    <string name="applications">Applications</string>
    <string name="battery_power">Battery/Power</string>
    <string name="camera_photo">Camera/Photo</string>
    <string name="connectivity">Connectivity</string>
    <string name="date_time">Date/Time</string>
    <string name="device_settings">Device Settings</string>
    <string name="files">Files</string>
    <string name="media">Media</string>
    <string name="messaging">Messaging</string>
    <string name="screen">Screen</string>
    <string name="add_action">Add Action</string>
    <string name="stopwatches">Stopwatches</string>
    <string name="select_option">Select Option</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="make_call">Make Call</string>
    <string name="stop_call">Stop Call</string>
    <string name="shortcutname">shortcutbyandromate</string>


    <string-array name="type">
        <item>Any</item>
        <item>Busy</item>
        <item>Free</item>
    </string-array>
</resources>