<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="266dp"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_gravity="left"
    android:fillViewport="true"
    android:scrollbars="none"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:elevation="@dimen/dp12"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/action_bar"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp56"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp20"
                android:src="@drawable/android_icon"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/dp20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/sp16"
                    android:text="@string/andromate"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_light"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/sp12"
                    android:text="@string/v5_11_5"/>
            </LinearLayout>

        </LinearLayout>


       <LinearLayout
           android:id="@+id/nvd_home"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/dp20"
           android:layout_marginTop="30dp"
           android:clickable="true"
           android:foreground="?android:attr/selectableItemBackground"
           android:gravity="center"
           android:padding="@dimen/dp4"
           android:orientation="horizontal">

           <ImageView
               android:layout_width="@dimen/dp18"
               android:layout_height="@dimen/dp20"
               android:src="@drawable/home"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/sp14"
               android:gravity="center"
               android:layout_marginStart="@dimen/dp22"
               android:fontFamily="@font/poppins_regular"
               android:textColor="@color/black"
               android:text="@string/home"/>
       </LinearLayout>
        <LinearLayout
            android:id="@+id/nvd_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/dp4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp18"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/help"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp22"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/help"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nvd_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="@dimen/dp4"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp18"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/blog_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp22"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/blog"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nvd_invite_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="30dp"
            android:padding="@dimen/dp4"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/invite_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp22"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/invite_friends"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nvd_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="@dimen/dp4"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp18"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/star_rate_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp22"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/rate"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nvd_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="@dimen/dp4"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp18"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/privacy_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp22"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/privacy_policy"/>
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9C000000"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/sp12"
            android:text="@string/v5_11_5"/>
    </RelativeLayout>
</ScrollView>