<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Fragments.HomeFragments">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_frag_bg">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="#70707070"
            app:cardCornerRadius="@dimen/dp18"
            android:layout_marginHorizontal="@dimen/dp26">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp20"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lly_add_macro"
                        android:layout_width="@dimen/dp120"
                        android:layout_height="@dimen/dp130"
                        android:gravity="center"
                        android:background="@drawable/add_macro"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/plus"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginTop="@dimen/dp8"
                            android:text="@string/add_macro"
                            tools:ignore="SmallSp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lly_addmacrowizard"
                        android:layout_width="@dimen/dp120"
                        android:layout_height="@dimen/dp130"
                        android:layout_marginStart="36dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/add_macrowizard"
                        >
                        <ImageView
                            android:layout_width="@dimen/dp40"
                            android:layout_height="@dimen/dp40"
                            android:src="@drawable/magic_wand"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"
                            android:gravity="center"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginTop="@dimen/dp8"
                            android:text="@string/add_macro_nwizard"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lly_expo_impo"
                        android:layout_width="@dimen/dp120"
                        android:layout_height="@dimen/dp130"
                        android:gravity="center"
                        android:background="@drawable/export_import"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/dp40"
                            android:layout_height="@dimen/dp40"
                            android:src="@drawable/impo_expo"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginTop="@dimen/dp8"
                            android:text="@string/export_import"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/dp120"
                        android:layout_height="@dimen/dp130"
                        android:layout_marginStart="36dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/macro_drawer"
                       >
                        <ImageView
                            android:layout_width="@dimen/dp40"
                            android:layout_height="@dimen/dp40"
                            android:src="@drawable/full_tray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginTop="@dimen/dp8"
                            android:text="@string/macro_drawer"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lly_stopwatch"
                        android:layout_width="@dimen/dp120"
                        android:layout_height="@dimen/dp130"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/stopwatches">
                        <ImageView
                            android:layout_width="@dimen/dp40"
                            android:layout_height="@dimen/dp40"
                            android:src="@drawable/timer"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp14"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginTop="@dimen/dp8"
                            android:text="@string/stopwatches"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </RelativeLayout>
</FrameLayout>